<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>puma560_description</name>
    <version>0.0.1</version>
    <description>URDF description for PUMA560 robot</description>
    <maintainer email="kamam.maxim@gmail.com">Finch_16</maintainer>
    <license>Apache-2.0</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>robot_state_publisher</depend>
    <depend>joint_state_publisher</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>rviz2</depend>
    <depend>xacro</depend>

    <depend>ros_gz</depend>
    <depend>ros_gz_sim</depend>
    <depend>gz_ros2_control</depend>
    <depend>controller_manager</depend>
    <depend>joint_trajectory_controller</depend>
    <depend>joint_state_broadcaster</depend>
    <depend>ros2_control</depend>
    <depend>ros_gz_bridge</depend>
    <depend>rqt_joint_trajectory_controller</depend>

    <depend>pluginlib</depend>
    <depend>hardware_interface</depend>

    <depend>sensor_msgs</depend>
    <depend>rviz_default_plugins</depend>
    <depend>rqt_image_view</depend>
    <depend>image_view</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
